--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -210,3 +210,296 @@ body{
     margin-top: 21px;
     text-transform: capitalize;
   }
+
+  .working-process__wrapper {
+    gap: 20px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  @media md, only screen and (min-width: 576px) and (max-width: 767px), (max-width: 575px) {
+    .working-process__wrapper {
+      -webkit-box-pack: center;
+          -ms-flex-pack: center;
+              justify-content: center;
+    }
+  }
+  .working-process__item {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    text-align: center;
+    position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin-bottom: 30px;
+  }
+  .working-process__item:last-child::before {
+    display: none;
+  }
+  .working-process__item::before {
+    content: "";
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    -webkit-transform: translate(110%, 25%);
+            transform: translate(110%, 25%);
+    background-repeat: no-repeat;
+    background-image: url('../img/shape.svg');
+  }
+  @media (max-width: 575px), only screen and (min-width: 576px) and (max-width: 767px), only screen and (min-width: 768px) and (max-width: 991px), only screen and (min-width: 992px) and (max-width: 1199px), only screen and (min-width: 1200px) and (max-width: 1399px) {
+    .working-process__item::before {
+      display: none;
+    }
+  }
+  .working-process__icon {
+    width: 150px;
+    height: 150px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin-bottom: 50px;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    position: relative;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    border-radius: 500px;
+    border: 1px dashed rgba(8, 10, 11, 0.3);
+    -webkit-filter: drop-shadow(0px 0px 60px rgba(21, 24, 27, 0.1));
+            filter: drop-shadow(0px 0px 60px rgba(21, 24, 27, 0.1));
+  }
+  @media only screen and (min-width: 992px) and (max-width: 1199px), only screen and (min-width: 768px) and (max-width: 991px) {
+    .working-process__icon {
+      margin-bottom: 30px;
+    }
+  }
+  @media only screen and (min-width: 576px) and (max-width: 767px), (max-width: 575px) {
+    .working-process__icon {
+      margin-bottom: 20px;
+    }
+  }
+  .working-process__icon .number {
+    font-size: 16px;
+    font-weight: 800;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 40px;
+    height: 40px;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    border-radius: 500px;
+    font-family: var(--rr-ff-heading);
+    background: #F4F1EE;
+    border: 1px dashed rgba(8, 10, 11, 0.3);
+  }
+  .working-process__icon:hover {
+    background-color: var(--rr-common-white);
+  }
+  .working-process__icon:hover svg [fill="#080A0B"] {
+    fill: var(--rr-theme-primary);
+  }
+  .working-process__icon:hover .number {
+    background: var(--rr-heading-primary);
+    color: var(--rr-common-white);
+  }
+  .working-process__text {
+    max-width: 300px;
+  }
+  .working-process__text h6 {
+    margin-bottom: 10px;
+  }
+  @media only screen and (min-width: 576px) and (max-width: 767px), (max-width: 575px) {
+    .working-process__text {
+      max-width: 100%;
+    }
+  }
+
+
+ 
+ul.filters {
+  display: block;
+  width: 100%;
+  margin: 0;
+  padding: 30px 0;
+}
+
+ul.filters > li {
+  list-style: none;
+  display: inline-block;
+}
+
+ul.filters > li > a {
+  display: block;
+  color: #434e5e;
+  text-decoration: none;
+  padding: 5px 20px;
+}
+
+ul.filters > li > a:hover {
+  background-color: #e6e9ed;
+}
+
+ul.filters > li.active > a {
+  color: #fff;
+  background-color: rgba(252, 41, 74, 1);
+}
+
+.filters.filters-tag {
+  display: inline-block;
+  padding: 0.25em 0.4em;
+  font-size: 75%;
+  line-height: 1;
+  text-align: center;
+}
+
+ul.filters.filters-tag > li > a {
+  display: block;
+  color: #434e5e;
+  border-radius: 0.25rem;
+  padding: 0.3rem 0.6rem;
+}
+
+ul.filters.filters-tag > li.active > a {
+  color: #fff;
+  background-color: rgba(252, 41, 74, 0.8);
+}
+
+.filters-tag {
+  font-size: 0.9rem;
+}
+
+.project {
+  position: relative;
+  margin-bottom: 50px;
+  color: #000;
+  border-radius: 0;
+  border: 1px solid #eee;
+  background-color: #fff;
+  box-shadow: 1px 1px 1.5px rgba(0, 0, 0, 0.075);
+}
+
+.project-head {
+  position: relative;
+  overflow: hidden;
+}
+
+.project-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 9;
+  background-color: rgba(67, 78, 94, 0.8);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
+  -webkit-transition: ease-in-out 0.2s;
+  -moz-transition: ease-in-out 0.2s;
+  -ms-transition: ease-in-out 0.2s;
+  transition: ease-in-out 0.2s;
+}
+
+.project-hover {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(252, 41, 74, 0.9);
+  z-index: 10;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
+  flex-direction: column;
+  box-sizing: border-box;
+  padding: 30px;
+  -webkit-transition: ease-in-out 0.2s;
+  -moz-transition: ease-in-out 0.2s;
+  -ms-transition: ease-in-out 0.2s;
+  transition: ease-in-out 0.2s;
+}
+
+.project-body {
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+h4.title {
+  color: #434e5e;
+  font-size: 1.2rem;
+  margin-bottom: 0;
+}
+
+.project-btn {
+  margin-bottom: -40px;
+  font-size: 0.9rem;
+  background-color: #fff;
+  color: #222;
+  border: 1px solid #eee;
+  border-radius: 0;
+  width: 120px;
+  box-shadow: 1px 1px 1.5px rgba(0, 0, 0, 0.075);
+}
+
+.project-btn:hover {
+  background-color: rgba(252, 41, 74, 1);
+  color: #fff;
+}
+
+
+
+.faq-top-content {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+}
+.faq-image img {
+  max-width: 50px;
+}
+.faq-answer {
+  margin-right: 80px;
+}
+.faq-answer.space {
+  margin-left: 80px;
+}
+
+.faq-link a {
+  display: inline-block;
+  background-color: #d25c3c;
+  color: #fff;
+  text-transform: uppercase;
+  padding: 7px 30px;
+  border-radius: 45px;
+}
