--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,9 @@ a{
     color: #333;
     transition: .3s;
 }
+a:hover{
+  color: var(--primary-color);
+}
 ul{
     list-style: none;
     margin: 0;
