--- a/style.css
+++ b/style.css
@@ -7,5 +7,5 @@ Description: A custom WordPress theme based on an HTML template.
 Version: 1.0
 License: GNU General Public License v2 or later
 License URI: https://www.gnu.org/licenses/gpl-2.0.html
-Text Domain: almahsaansteel
+Text Domain: almashaansteel
 */
