--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,7 +30,9 @@ body{
     font-weight: 400;
     line-height: 27px;
 }
-
+.container-fluid {
+	padding: 0 60px;
+}
 /* Header */
 
 .header-top {
@@ -340,10 +342,11 @@ span.primary{
 .project-slider-heading h4 {
   font-size: 50px;
   font-weight: 800;
-  color: #333;
+  color: #fff;
 }
 .project-slider-top-link {
   text-align: right;
+  color: #fff;
 }
 .project-slider-top-link a {
   text-transform: uppercase;
@@ -353,6 +356,7 @@ span.primary{
   justify-content: flex-end;
   align-items: center;
   gap: 10px;
+  color: #fff;
 }
 .project-slider-top-link a i {
   background-color: var(--primary-color);
