--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,9 @@
 :root{
     --primary-color: #d25c3c;
     --text-color: #393939;
+    --brick-orange: #d25c3c;
+    --charcoal-black: #10181c;
+    --dark-gray: #4b4b4b;
 }
 *{
     margin: 0;
@@ -15,9 +18,6 @@ a{
     transition: .3s;
     font-weight: 500;
 }
-a:hover{
-  color: var(--primary-color);
-}
 ul{
     list-style: none;
     margin: 0;
@@ -26,7 +26,7 @@ ul{
 body{
   font-family: "Montserrat", serif;
     font-size: 16px;
-    color: var(--text-color);
+    color: var(--dark-gray);
     font-weight: 400;
     line-height: 27px;
 }
@@ -432,4 +432,7 @@ span.primary{
 }
 .slicknav_menu {
 	display: none;
+}
+#almashaanBanner .carousel-control-prev:hover, #almashaanBanner .carousel-control-next:hover {
+	background-color: var(--primary-color) !important;
 }
