--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+@font-face {
+  font-family: bernoru;
+  src: url('../webfonts/bernoru-blackultraexpanded.ttf');
+}
 :root{
     --primary-color: #d25c3c;
     --text-color: #393939;
@@ -24,11 +27,20 @@ ul{
     padding: 0;
 }
 body{
-  font-family: "Montserrat", serif;
-    font-size: 16px;
-    color: var(--dark-gray);
-    font-weight: 400;
-    line-height: 27px;
+  font-family: "Work Sans", sans-serif;
+  font-size: 15px;
+  color: var(--dark-gray);
+  font-weight: 400;
+  line-height: 25px;
+}
+h1, h2, h3, h4, h5, h6{
+  font-family: bernoru;
+}
+h1{
+  font-size: 51px;
+}
+h2, h3, h4, h5, h6{
+  font-size: 39px;
 }
 .container-fluid {
 	padding: 0 60px;
