--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -57,5 +57,15 @@
 .scroll-top{
     display: none !important;
 }
+.almashaan-slider-content h4 {
+	font-size: 40px;
+}
+.almashaan-slider-list {
+	flex-direction: column;
+	gap: 10px;
+}
+.almashaan-slider-content {
+	margin-bottom: 30px;
+}
   
 }
