--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,6 +32,7 @@ body{
   color: var(--dark-gray);
   font-weight: 400;
   line-height: 25px;
+  overflow-x: hidden;
 }
 h1, h2, h3, h4, h5, h6{
   font-family: bernoru;
