--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,7 +49,7 @@ h2, h3, h4, h5, h6{
 /* Header */
 
 .header-top {
-    background-color: #1a2a36;
+    background-color: #939699;
     padding: 15px 0;
     border-bottom: 1px solid #f4f4f4;
   }
@@ -64,14 +64,14 @@ h2, h3, h4, h5, h6{
     justify-content: space-between;
   }
   .header span{
-    color: #fff;
+    color: #333;
   }
   .header-top-menu {
     display: flex;
     gap: 35px;
   }
   .header-top-menu li a{
-    color: #fff;
+    color: #333;
   }
 .mainemenu ul {
     display: flex;
@@ -186,7 +186,7 @@ h2, h3, h4, h5, h6{
     min-height: 200px;
   }
   .single-contact i {
-    color: red;
+    color: #939699;
     font-size: 22px;
   }
   .single-contact h4 span {
@@ -243,7 +243,6 @@ h2, h3, h4, h5, h6{
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(252, 41, 74, 0.9);
   z-index: 10;
   display: flex;
   align-items: center;
@@ -281,7 +280,6 @@ h4.title {
 }
 
 .project-btn:hover {
-  background-color: rgba(252, 41, 74, 1);
   color: #fff;
 }
 
