--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -71,7 +71,7 @@ h2, h3, h4, h5, h6{
     gap: 35px;
   }
   .header-top-menu li a{
-    color: #333;
+    color: #fff;
   }
 .mainemenu ul {
     display: flex;
